# OIBSIP

Python-Task1-VoiceAssistant/: .gitignore  README.md  commands.py  config.py  custom_commands.json  nlu.py  requirements.txt  setup.cfg  utils.py  voice_assistant.py
Python-Task2-BMICalculator/: .gitignore  README.md  bmi_calculator.py  bmi_utils.py  database.py  requirements.txt  setup.cfg
Python-Task3-RandomPasswordGenerator/: README.md  password_generator.py
