[metadata]
name = nova-voice-assistant
version = 1.0.0
description = Advanced AI Voice Assistant (Nova)
author = Ibrar Ahmad
license = MIT

[options]
py_modules =
    voice_assistant
    commands
    config
    utils
    nlu
include_package_data = True
install_requires =
    SpeechRecognition==3.14.3
    pyttsx3==2.99
    google-generativeai==0.8.5
    python-dotenv==1.1.1
    requests==2.32.5
    wikipedia==1.4.0
    pywhatkit==5.4
    pyjokes==0.8.3
    Pillow==11.3.0
    PyAudio==0.2.14
    nltk==3.8.1

[options.entry_points]
console_scripts =
    nova-assistant = voice_assistant:main
