[metadata]
name = advanced-bmi-calculator
version = 1.0.0
description = Advanced BMI Calculator with GUI, SQLite, and BMI Trend Visualization
author = Ibrar Ahmad
license = MIT

[options]
py_modules =
    bmi_calculator
    bmi_utils
    database

install_requires =
    matplotlib==3.10.5
    Pillow==11.3.0

[options.entry_points]
console_scripts =
    bmi-calculator = bmi_calculator:main